--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alfa": "^0.7.0",
     "just-camel-case": "^4.0.2",
     "just-pascal-case": "^1.1.0",
     "react": "^16.8.6",
