--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fleux",
   "version": "0.0.9",
-  "description": "",
+  "description": "Towards Sane State Management",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.umd.js",
