Add testing scripts
To cross-reference scripts in the `package.json`, I chose to use `cross-env $npm_execpath` to have consistent invocations of npm/yarn and have that working across Windows and everything else. This might be overkill, but I think it feels cleaner.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "module": "dist/index.esm.js",
   "browser": "dist/index.umd.js",
   "scripts": {
-    "build": "npm run clean && rollup -c",
+    "build": "cross-env $npm_execpath run clean && rollup -c",
+    "build:watch": "cross-env $npm_execpath run clean && rollup -c -w",
     "clean": "rimraf build/ dist/",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "rollup -c -w"
+    "test": "cross-env $npm_execpath run build && jest",
+    "test:watch": "cross-env $npm_execpath run build && jest --watch"
   },
   "files": [
     "dist",
