Add babel plugin for better error messages
`@babel/plugin-transform-react-jsx-source` allows stacktraces for React rendering errors to be able to include line numbers. This is not used in `NODE_ENV=production`.

--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,36 @@
 {
-    "presets": [
-        ["@babel/preset-env", { "modules": false }],
-        "@babel/preset-react"
-    ],
-    "plugins": [
-        ["@babel/plugin-proposal-decorators", {"legacy": true}],
-        ["@babel/plugin-proposal-class-properties", {"loose":true}]
-    ]
+    "env": {
+        "development": {
+            "presets": [
+                ["@babel/preset-env", { "modules": false }],
+                "@babel/preset-react"
+            ],
+            "plugins": [
+                ["@babel/plugin-proposal-decorators", {"legacy": true}],
+                ["@babel/plugin-proposal-class-properties", {"loose":true}],
+                "@babel/plugin-transform-react-jsx-source"
+            ]
+        },
+        "test": {
+            "presets": [
+                ["@babel/preset-env", { "modules": false }],
+                "@babel/preset-react"
+            ],
+            "plugins": [
+                ["@babel/plugin-proposal-decorators", {"legacy": true}],
+                ["@babel/plugin-proposal-class-properties", {"loose":true}],
+                "@babel/plugin-transform-react-jsx-source"
+            ]
+        },
+        "production": {
+            "presets": [
+                ["@babel/preset-env", { "modules": false }],
+                "@babel/preset-react"
+            ],
+            "plugins": [
+                ["@babel/plugin-proposal-decorators", {"legacy": true}],
+                ["@babel/plugin-proposal-class-properties", {"loose":true}],
+            ]
+        }
+    }
 }
