--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "fromentries": "^1.1.0",
     "just-camel-case": "^4.0.2",
-    "just-pascal-case": "^1.1.0"
+    "just-pascal-case": "^1.1.0",
+    "just-typeof": "^2.0.0"
   },
   "peerDependencies": {
     "react": "^16.3.0"
