--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "fromentries": "^1.2.0",
     "just-camel-case": "^4.0.2",
+    "just-compare": "^1.3.0",
     "just-pascal-case": "^1.1.0",
     "just-typeof": "^2.0.0"
   },
