Change bundler from rollup to esbuild
While `esbuild` is still marketed as somewhat experimental, its speed
just does the trick for me. On the laptop I am currently on, the
bundling time went from 3.5s with rollup to 50ms with esbuild! This is
such a significant improvement to the workflow, that I decide in favor
of replacing rollup with esbuild.

--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "Towards Sane State Management",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
-  "browser": "dist/index.umd.js",
+  "browser": "dist/index.iife.js",
   "scripts": {
-    "build": "yarpm run clean && rollup -c",
-    "build:watch": "yarpm run clean && rollup -c -w",
+    "build": "yarpm run clean && node build",
     "clean": "rimraf build/ dist/",
     "test": "yarpm run build && jest",
     "test:watch": "yarpm run build && jest --watch"
@@ -44,17 +43,13 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.5.0",
+    "esbuild": "^0.8.0",
     "jest": "^26.0.1",
     "jest-extended": "^0.11.5",
     "jsdom": "^16.2.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "rimraf": "^3.0.2",
-    "rollup": "^2.3.2",
-    "rollup-plugin-babel": "^4.4.0",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-typescript": "^1.0.1",
     "tslib": "^2.0.0",
     "typescript": "^3.9.5",
     "yarpm": "^0.2.1"
